--- a/hombre.html
+++ b/hombre.html
@@ -72,35 +72,35 @@
                         alt="peugeot 2008 gris" class="imgProducto">
                     <p class="autos-tittle cardTexto mt-2">CAMISA</p>
                     <p class="autos-tittle cardTexto">$50.000</p>
-                    <div class="cardTexto"><button type="submit" class="btn btn-danger mb-3">Ver Más</button></div>
+                    <div class="cardTexto"><button type="submit" value=50000 class="boton-comprar" class="btn btn-danger mb-3">Ver Más</button></div>
                 </div>
                 <div class="cardProducto">
                     <img src="../images/SWAETER.webp"
                         alt="peugeot 2008 gris" class="imgProducto">
                     <p class="autos-tittle cardTexto mt-2">SWEATER</p>
                     <p class="autos-tittle cardTexto">$40.000</p>
-                    <div class="cardTexto"><button type="submit" class="btn btn-danger mb-3">Ver Más</button></div>
+                    <div class="cardTexto"><button type="submit" value=40000 class="boton-comprar" class="btn btn-danger mb-3">Ver Más</button></div>
                 </div>
                 <div class="cardProducto">
                     <img src="../images/CAMPERAALGODON.jpg"
                         alt="peugeot 2008 gris" class="imgProducto">
                     <p class="autos-tittle cardTexto mt-2">CAMPERA DE ALGODON</p>
                     <p class="autos-tittle cardTexto">$55.000</p>
-                    <div class="cardTexto"><button type="submit" class="btn btn-danger mb-3">Ver Más</button></div>
+                    <div class="cardTexto"><button type="submit" value=55000 class="boton-comprar" class="btn btn-danger mb-3">Ver Más</button></div>
                 </div>
                 <div class="cardProducto">
                     <img src="../images/JEANHO,BRE.webp"
                         alt="peugeot 2008 gris" class="imgProducto">
                     <p class="autos-tittle cardTexto mt-2">JEAN</p>
                     <p class="autos-tittle cardTexto">$60.000</p>
-                    <div class="cardTexto"><button type="submit" class="btn btn-danger mb-3">Ver Más</button></div>
+                    <div class="cardTexto"><button type="submit" value=60000 class="boton-comprar" class="btn btn-danger mb-3">Ver Más</button></div>
                 </div>
                 <div class="cardProducto">
                     <img src="../images/CAMPERACUEROHOMBRE.jpg"
                         alt="peugeot 2008 gris" class="imgProducto">
                     <p class="autos-tittle cardTexto mt-2">CAMPERA CUERO</p>
                     <p class="autos-tittle cardTexto">$135.000</p>
-                    <div class="cardTexto"><button type="submit" class="btn btn-danger mb-3">Ver Más</button></div>
+                    <div class="cardTexto"><button type="submit" value=135000 class="boton-comprar" class="btn btn-danger mb-3">Ver Más</button></div>
                 </div>
             </div>
         </section>
